--- a/tic_tac_toe/pubspec.yaml
+++ b/tic_tac_toe/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.1.5
   mockito: ^5.4.6
   build_runner: ^2.4.15
+  flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,16 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/app_icon.png"
+  min_sdk_android: 21
+
+flutter_native_splash:
+  color: "#42a5f5" # Or use a background color
+  image: assets/images/light_background.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
